# latihan-machine-learning

./: README.md  main.py  pyproject.toml
Latihan-Feature-Engineering/: notebook-feature-engineering.ipynb
Latihan-Implementasi-Algoritma-Naive-Bayes/: notebook.ipynb
Latihan-Supervised-Learning-Classification/: notebook-classification.ipynb
Latihan-Supervised-Learning-Regression/: README.md  notebook-regression.ipynb
Latihan-Underfitting-Overfitting/: notebook-overfitting.ipynb
Latihan-Unsupervised-Learning-Clustering/: notebook-clustering.ipynb
