[project]
name = "latihan-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.11,<1.13",
    "pandas>=2.0,<2.2",
    "scikit-learn>=1.3,<1.5",
    "imbalanced-learn>=0.12,<0.13",
    "yellowbrick>=1.5,<1.6",
    "matplotlib>=3.7,<3.9",
    "seaborn>=0.13,<0.14",
    "ipykernel>=6.29",
]

